test/gateway/kong-gateway-sealed-secret.yaml
---
apiVersion: bitnami.com/v1alpha1
kind: SealedSecret
metadata:
  name: kong-ingress-controller-postgresql
  namespace: kong
spec:
  encryptedData:
    password: AgBZvNGITp/glEn9thN9uWk5QepcxnQ20MUwU3lQbTxZsbvcmQ/+XQHLI87iIt01pE8cGM6FH7Gn+muLa2x5/a7RjbnDA5ezVKdmMwtW0X0GxW5TJVz6q0BRPkORk65GTA1amIgChAsUB+PA+Dto+a19LXicrBuUcGVy9gLNZLPXr/w4p6GhmXF01loHuSKuOGwwLrkIXTzJYXcDyrG/sIcRxSnkWTGNfrAB8VRhNJFkfsaoDZV5MijBIjc5i4rghR5RlULLZZ735dl6qSQXJH7ZzbZrIlxtpWgqg26+KjymSWMQR4/Krpw+0q3Q9cBbVjkn8rySHMSXGU2QDNYR5xnJlpwJal1Kq7dW4GMo5Og88CxN+HiQJWt7scDmmDPCIouGcqhDpPwPWO90wB6CoQt1Y5Oh7VMRgzVQza4+EnjH2/ACDfqRmIfPS91z54cHeNzRy9NEUP/U0eZNwtrWKTmGXxs/eGdu93/bWV [...]
    username: AgCfEwmT+StVtlhGDDxQQ/8BthhPhvbZCLgfQTDhBUx1iXrFvxq7yptTb7HBxCsgDVGeWqcoDWRXY0vGumZL3aoq/J/VUJQZEfZR8ciOBbdNxXslgkLb7Z+ZwsF1yLDQwQXp03TIL8vgbLFrEVEdCUft4W1gWRhK+tnbK5Q+RGTLTP9ciRH0l3EIsJUSG5mMCeZLc/eV/+41WUyYE4Oa26xgjF+6e05rThjmRH+xpK+yR7gzX4LaoXE7Ma8F+0kx9KsHlVh+5Tl9dkSOBt5GNl1xMPxvvSzLJ8t64sf61JWAdid237b03YDXLtYpjXU+NRQW14AJCloFOO/S/r+Cz3Jr+iLbayLu9FW1SZAZtnGZozKEzEfnXwP9v26tAx5ftBMo/tuqkJDyAuuue3XFLvu/j7jkswT82h3W15X1RyT1SO8PcE4VcQ3N7C0rQ5OJMp8y0/k5cuHmRwZo1eEE+223O0JkBFc9L31w9X [...]
  template:
    metadata:
      name: kong-ingress-controller-postgresql
      namespace: kong
    type: Opaque
