test/gateway/kong-gateway-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: kong-ingress-controller-postgresql
  namespace: kong
type: Opaque
stringData:
  postgresql-password: "motdepassefort"
